javascript file almost done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <button>Remove</button>
     <hr>
     <input type="text" name="title" id="title" placeholder="Title"> <br>
-    <input type="text" name="title" id="title" placeholder="Title"> <br>
-    <button>add</button>
+    <input type="text" name="author" id="author" placeholder="Author"> <br>
+    <button id="btn">add</button>
 </body>
+<script></script>
 </html>
