add book function done

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
     <h1>Awesome books</h1>
-
-    <p>Lorem ipsum <br> Testeroo Testyy</p>
-    <button>Remove</button>
-    <hr>
-    <p>Second book <br> Testeroo Testyy</p>
-    <button>Remove</button>
-    <hr>
+    <div class="list">
+        <div class="listall">
+            
+        </div>
+    </div>
+    <form action="">
     <input type="text" name="title" id="title" placeholder="Title"> <br>
     <input type="text" name="author" id="author" placeholder="Author"> <br>
     <button id="btn">add</button>
+</form>
+    <div id="msg">
+        <pre></pre>
+    </div>
 </body>
-<script></script>
+<script src="script.js"></script>
 </html>
