Add book styled

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <div id="msg">
         <pre></pre>
     </div>
+
+
+
+    <br>
+<h1>adding and removing list</h1>
+<form action="">
+    <input type="text" name="text" id="text">
+    <button type="submi" class="btn-list">
+        
+    </button>
+</form>
+
 </body>
 <script src="script.js"></script>
 </html>
