--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,38 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>all awesome books</h1>
-    <div class="list">
-        <div class="listall">
-            
+<header>
+    <nav>
+        <a href="" nav="nav-branding">Awesome Books</a>
+        <ul class="nav-menu">
+            <li class="nav-item"> <a href="#" class="nav-link"> list</a></li>
+            <li class="nav-item"> <a href="#" class="nav-link"> add new</a></li>
+            <li class="nav-item"> <a href="#" class="nav-link"> contact</a></li>
+        </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
-    </div>
-    <form action="">
-    <input type="text" name="title" id="title" placeholder="Title"> <br>
-    <input type="text" name="author" id="author" placeholder="Author"> <br>
-    <button id="btn">add</button>
-</form>
-    <div id="msg">
-        <pre></pre>
-    </div>
+    </nav>
+</header>
 
+<body>
+    <section class="flex-body ">
+        <span id="date"></span>
+        <h1>all awesome books</h1>
+        <div class="list">
+            <div class="listall">
 
-
-    <br>
-<h1>adding and removing list</h1>
-<form action="">
-    <input type="text" name="text" id="text">
-    <button type="submi" class="btn-list">
-        
-    </button>
-</form>
-
+            </div>
+        </div>
+        <form action="">
+            <input type="text" name="title" id="title" placeholder="Title"> <br>
+            <input type="text" name="author" id="author" placeholder="Author"> <br>
+            <button id="btn">add</button>
+        </form> 
+    </section>
 </body>
 <script src="script.js"></script>
+
 </html>
