--- a/index.html
+++ b/index.html
@@ -12,33 +12,45 @@
     <nav>
         <a href="" nav="nav-branding">Awesome Books</a>
         <ul class="nav-menu">
-            <li class="nav-item"> <a href="#" class="nav-link"> list</a></li>
-            <li class="nav-item"> <a href="#" class="nav-link"> add new</a></li>
-            <li class="nav-item"> <a href="#" class="nav-link"> contact</a></li>
+            <li class="nav-item"> <a class="nav-link" id="list"> list</a></li>
+            <li class="nav-item"> <a class="nav-link" id="add"> add new</a></li>
+            <li class="nav-item"> <a class="nav-link" id="contact"> contact</a></li>
         </ul>
-        <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
     </nav>
 </header>
 
 <body>
-    <section class="flex-body ">
+    <main class="flex-body">
         <span id="date"></span>
-        <h1>all awesome books</h1>
-        <div class="list">
-            <div class="listall">
+        <section id="all-book">
+            <h1>all awesome books</h1>
+            <div class="list">
+                <div class="listall">
 
+                </div>
             </div>
-        </div>
-        <form action="">
-            <input type="text" name="title" id="title" placeholder="Title"> <br>
-            <input type="text" name="author" id="author" placeholder="Author"> <br>
-            <button id="btn">add</button>
-        </form> 
-    </section>
+        </section>
+        <section id="add-book">
+            <h1>Add a new book</h1>
+            <form action="">
+                <input type="text" name="title" id="title" placeholder="Title"> <br>
+                <input type="text" name="author" id="author" placeholder="Author"> <br>
+                <button id="btn">add</button>
+            </form>
+        </section>
+        <section id="contactbody">
+            <h1>Contact information</h1>
+            <p>Do you have any questions or you just want to say "Hello"? You can reach out to us!</p>
+            <ul>
+                <li>Our e-mail mail@mail.com</li>
+                <li>Our phone number: 0987654321</li>
+                <li>Our address: streetname 22, 84503 City, Country</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        Copyright &copy; 2023
+    </footer>
 </body>
 <script src="script.js"></script>
 
